# bandhiking

./: .gitignore  .platform.app.yaml  build.sh  go.mod  go.sum  main.go  readme.md  sorts.json
.platform/: services.yaml
.platform/local/: project.yaml
prestatic/: index.html  style.css
prestatic/inspector%3a/localhost/: inspector-stylesheet
prestatic/localhost%3a8080/: index.html  style.css
source/: .genemichaels.json  Cargo.toml  Dockerfile  build.nix  build.rs  build.sh  deploy.sh
source/src/: genres.json  locations_id_to_name.json  main.rs
source/terraform/: .gitignore  dns.tf  docker.tf  fly.tf  main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
source/ts/: rollup.config.js  tsconfig.json
source/ts/src/: helper.ts  mobile.ts
ts/: .eslintrc.js  chain.ts  constants.ts  helper.ts  mobile.ts  package-lock.json  package.json  tsconfig.json  widgets.ts
ts/src/: chain.ts  mobile.ts  widgets.ts
